# cine-metrics

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dagster_home/: dagster.yaml
dbt/: dbt_project.yml  profiles.yml
dbt/models/: sources.yml
dbt/models/marts/core/: core.yml  dim_dates.sql  dim_distributors.sql  dim_movies.sql  fct_daily_revenues.sql  fct_weekly_revenues.sql  int_weekly_revenues.sql
dbt/models/staging/: stg_movies_to_fetch.sql  stg_revenue_per_day.sql
dbt/tests/generic/: positive_value.sql
scripts/: tasks.py
src/: definitions.py
src/assets/: marts.py  raw.py  staging.py
src/resources/: database.py  external.py
src/schedules/: etl.py
src/sensors/: data.py
src/utils/raw/: helpers.py
src/utils/staging/: helpers.py
streamlit/: app.py
