[tool.poetry]
name = "cinemetrics"
version = "0.1.0"
description = "A data engineering project for movie revenue analysis"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
dagster = "1.8.7"
dagster-dbt = "0.24.7"
dagster-duckdb-pandas = "0.24.7"
dagit = "1.8.7"
dbt-core = "1.8.7"
dbt-duckdb = "1.8.3"
duckdb = "1.1.0"
streamlit = "1.38.0"
streamlit-extras = "0.4.7"
requests = "2.32.3"
python-dotenv = "1.0.1"
aiohttp = "3.10.6"
plotly = "5.24.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
black = "24.8.0"
isort = "5.13.2"
mypy = "1.11.2"
ruff = "0.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "C4", "T20", "TRY", "W"]
ignore = ["E501"]
exclude = ["./scripts"]

[tool.poetry.scripts]
format = "scripts.tasks:format"
lint = "scripts.tasks:lint"
typecheck = "scripts.tasks:typecheck"
check = "scripts.tasks:check"

[tool.dagster]
module_name = "src.definitions"
